docs/errors/examples/array-type-fixed-size/array-type-fixed-size.expected.txt
error[E2001]: unexpected token
  --> array-type-fixed-size.grob:3:14
   |
 3 | fn f(xs: int[5]): int {
   |              ^
   |
   = note: fixed-size array types are not supported — use 'T[]'
   = note: got integer literal `5`
